[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "energy-plus-utility"
version = "0.1.0"
requires-python = ">=3.9"
description = "EnergyPlus utilities with a Colab bootstrapper (silent)."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Mugalan", email = "mugalan@gmail.com" }]
dependencies = ["numpy>=1.24", "pandas>=2.0", "plotly>=5.0"]

[project.scripts]
eplus-prepare-colab = "eplus.colab_bootstrap:main"   # optional CLI

[tool.hatch.build]
packages = ["eplus"]
include  = ["README.md", "LICENSE"]
